src/objects/Procedure__c.object
<CustomObject>
    <fields>
        <fullName>Ablation_Total_Count__c</fullName>
        <label># Ablation Total Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Ablation Catheter</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AccountNameSJM_ID__c</fullName>
        <formula>Account__r.Name + &apos;(&apos; + Account__r.SJM_ID__c + &apos;)&apos;</formula>
        <label>AccountNameSJM_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account__r.Physical_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Form__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SJM_ID__c</fullName>
        <formula>Account__r.SJM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SJM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account__r.Physical_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Procedures</relationshipLabel>
        <relationshipName>Procedures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>Account__r.USD_AF_Area__c</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Price__c</fullName>
        <label>Competitor Rev.</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>notEqual</operation>
            <value>SJM, &apos;&apos;, Agilis NxT, SL, SR, Mullins, RAMP, LAMP, CSTA, SALF, SEPT</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DBSG_Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Implant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBSG_Follow_up_Type__c</fullName>
        <label>Follow up Type</label>
        <picklist>
            <picklistValues>
                <fullName>Programming Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBSG_Indication__c</fullName>
        <description>DBS Germany Indication</description>
        <label>Indication</label>
        <picklist>
            <picklistValues>
                <fullName>PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dystonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBSG_Intervention_Type__c</fullName>
        <description>DBS Germany Intervention Type</description>
        <label>Intervention Type</label>
        <picklist>
            <picklistValues>
                <fullName>De Novo IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De Novo IPG + Electrodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Electrodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBSG_Target_Area_2__c</fullName>
        <description>DBS Germany Target Area 2</description>
        <label>Target Area 2</label>
        <picklist>
            <picklistValues>
                <fullName>STN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nucleus Accumbens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBSG_Target_Area__c</fullName>
        <description>DBS Germany</description>
        <label>Target Area</label>
        <picklist>
            <picklistValues>
                <fullName>STN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nucleus Accumbens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBS_Account_Search__c</fullName>
        <formula>Account__r.Search_2__c</formula>
        <label>Search Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Implant_Duration_Time__c</fullName>
        <inlineHelpText>Enter Implant Duration Time in Minutes</inlineHelpText>
        <label>Duration (Minutes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBS_Travel_Time__c</fullName>
        <inlineHelpText>Enter Travel Time in Minutes</inlineHelpText>
        <label>Travel Time (Minutes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBS_Wait_Time__c</fullName>
        <inlineHelpText>Enter Wait Time in Minutes</inlineHelpText>
        <label>Wait Time (Minutes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Total_Count__c</fullName>
        <label># DiagnosticTotal Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>EP Study - Diagnostic EP Catheters</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dose_1__c</fullName>
        <label>Dose 1</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dose_2__c</fullName>
        <label>Dose 2</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dose_3__c</fullName>
        <label>Dose 3</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dose_Amount__c</fullName>
        <label>Dose Amount</label>
        <picklist>
            <picklistValues>
                <fullName>Not Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recorded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fluoro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dose_Formula__c</fullName>
        <formula>TEXT(Dose_1__c) + TEXT(Dose_2__c) + TEXT(Dose_3__c) + TEXT(Dose_4__c) + &quot;.&quot; + TEXT(Dose_5__c) + &quot; &quot; + TEXT(Dose_Unit_of_Measurement__c)</formula>
        <label>Dose</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dose_Unit_of_Measurement__c</fullName>
        <label>Dose Unit of Measurement</label>
        <picklist>
            <picklistValues>
                <fullName>mSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mGy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Procedures1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fin_CreatedBy__c</fullName>
        <formula>IF(CreatedBy.FirstName ==&apos;EIM&apos;,  Upd_CreatedBy__c ,  CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fin_CreatedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICE_Total_Count__c</fullName>
        <label># ICE Total Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>ICE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Introducer_Total_Count__c</fullName>
        <label># Introducer Total Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>EP Study - Introducers</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Modified_By__c</fullName>
        <label>Legacy Modified By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Modified_Date__c</fullName>
        <label>Legacy Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Row Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Physician_Begins_Vascular_Access__c</fullName>
        <label>Physician Begins Vascular Access</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:50 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physician_Declares_End_of_Procedure__c</fullName>
        <label>Physician Declares End of Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:50 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:20 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:40 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:50 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProcedureOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProcedureOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procedure_Covered_By_Email__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:Owner:User.Email}</formula>
        <label>Procedure: Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Created_Date__c</fullName>
        <label>Procedure Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Procedure_Date__c</fullName>
        <label>Procedure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Procedure_Number__c</fullName>
        <description>Procedure Number</description>
        <externalId>true</externalId>
        <label>Procedure Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Procedure_Physician_Id__c</fullName>
        <formula>Procedure_Physician__r.Id</formula>
        <label>Procedure Physician Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Physician__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Procedure Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician/Practitioner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Procedures</relationshipLabel>
        <relationshipName>Procedures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procedure_Type__c</fullName>
        <label>Procedure Type</label>
        <picklist>
            <picklistValues>
                <fullName>NavX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NavX SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NavX SE and MediGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NavX and Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide and Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide and NavX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>Accessory Pathway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL Atypical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL Typical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNRT Atypical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVNRT Typical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-inducible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT Idiopathic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT Ischemic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Account__r.USD_AF_Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Related_Event_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SJM_Abl_TactiCath__c</fullName>
        <description>Procedure Items using TactiCath</description>
        <inlineHelpText>SJM Ablation TactiCath</inlineHelpText>
        <label>SJM Abl TactiCath</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Ablation Catheter</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Tip_Size__c</field>
            <operation>equals</operation>
            <value>TactiCath</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Ablation_Count__c</fullName>
        <label># SJM Ablation Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Ablation Catheter</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Ablation_Pecentage__c</fullName>
        <formula>IF(SJM_Ablation__c=0,0,(SJM_Ablation__c/Total_Ablation__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% SJM Ablation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Ablation_Per_Cnt__c</fullName>
        <formula>IF(SJM_Ablation_Count__c=0,0,(SJM_Ablation_Count__c/Ablation_Total_Count__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SJM Ablation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Ablation__c</fullName>
        <label>SJM Ablation</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>Ablation Catheter</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Capture__c</fullName>
        <formula>IF(SJM_Count__c=0,0,(SJM_Count__c/Total_Count__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SJM Capture</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Count__c</fullName>
        <label># SJM Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM, Agilis NxT, SL, SR, Mullins, RAMP, LAMP, CSTA, SALF, SEPT</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Diagnostic_Count__c</fullName>
        <label># SJM Diagnostic Count</label>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>EP Study - Diagnostic EP Catheters</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SJM_Diagnostic_Pecentage__c</fullName>
        <formula>IF(SJM_Diagnostic__c=0,0,(SJM_Diagnostic__c/Total_Diagnostic__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% SJM Diagnostic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Diagnostic_Per_Cnt__c</fullName>
        <formula>IF(SJM_Diagnostic_Count__c=0,0,(SJM_Diagnostic_Count__c/Diagnostic_Total_Count__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SJM Diagnostic %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SJM_Diagnostic__c</fullName>
        <label>SJM Diagnostic</label>
        <summarizedField>Procedure_Item__c.Unit_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Procedure_Item__c.Procedure_Item__c</field>
            <operation>equals</operation>
            <value>EP Study - Diagnostic EP Catheters</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Procedure_Item__c.Manufacturer__c</field>
            <operation>equals</operation>
            <value>SJM</value>
        </summaryFilterItems>
        <summaryForeignKey>Procedure_Item__c.Procedure__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>